--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>store</title>
+    <title>Vizta</title>
   </head>
   <body>
     <div id="root"></div>
